--- a/ORMBenchmarksTest/App.config
+++ b/ORMBenchmarksTest/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Sports" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Sports.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  <add name="Players" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Sports.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="Sports" connectionString="Data Source=localhost;Initial Catalog=EFPerfTest;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="Players" connectionString="Data Source=localhost;Initial Catalog=EFPerfTest;Integrated Security=True" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
