--- a/ORMBenchmarksTest/ORMBenchmarksTest.csproj
+++ b/ORMBenchmarksTest/ORMBenchmarksTest.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>ORMBenchmarksTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -23,7 +24,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -84,7 +84,11 @@
     <Compile Include="DataAccess\ADONET.cs" />
     <Compile Include="DataAccess\ADONetReader.cs" />
     <Compile Include="DataAccess\Dapper.cs" />
+    <Compile Include="DataAccess\EntityFrameworkAsyncDTO.cs" />
+    <Compile Include="DataAccess\EntityFrameworkDTO.cs" />
+    <Compile Include="DataAccess\EntityFrameworkAsync.cs" />
     <Compile Include="DataAccess\EntityFramework.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="TestData\Database.cs" />
     <Compile Include="DataAccess\ITestSignature.cs" />
     <Compile Include="DTOs\PlayerDTO.cs" />
@@ -103,15 +107,6 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Sports.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Sports_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>Sports.mdf</DependentUpon>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
