--- a/ORMBenchmarksTest/packages.config
+++ b/ORMBenchmarksTest/packages.config
@@ -2,27 +2,27 @@
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="Dapper" version="1.50.2" targetFramework="net45" requireReinstallation="true" />
-  <package id="DapperExtensions" version="1.4.4" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Http.Abstractions" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Http.Features" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.Design" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.Relational.Design" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.Tools" version="1.1.0-preview4-final" targetFramework="net462" developmentDependency="true" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.1.0" targetFramework="net462" />
+  <package id="DapperExtensions" version="1.5.0" targetFramework="net462" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.Design" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.Relational.Design" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.Tools" version="1.1.0" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Options" version="1.1.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Primitives" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
@@ -49,7 +49,7 @@
   <package id="System.Linq" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net462" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="net462" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net462" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net462" />
